src/z80asm/z80asm2/t/30-directive/expected/undef_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/undef_11.asm
Assembling t/30-directive/input/undef_11.asm...
t/30-directive/input/undef_11.asm:1:7: error: Expected macro name after UNDEF
    #undef ; no name
          ^
t/30-directive/input/undef_11.asm:2:14: error: Unexpected token after UNDEF: world
    #undef hello world ; extra tokens
                 ^
# file: t/30-directive/input/undef_11.asm
EndOfLine	"\n"	3:1	
